trunk/Archive2/98/7bf7863f2f01ce/output
main.cpp:2:17: error: use of undeclared identifier 'Convert'
    int count = Convert.ToInt(cond1) + Convert.ToInt(cond2) + ... + Convert.ToInt(cond5);
                ^
main.cpp:2:31: error: use of undeclared identifier 'cond1'
    int count = Convert.ToInt(cond1) + Convert.ToInt(cond2) + ... + Convert.ToInt(cond5);
                              ^
main.cpp:2:40: error: use of undeclared identifier 'Convert'
    int count = Convert.ToInt(cond1) + Convert.ToInt(cond2) + ... + Convert.ToInt(cond5);
                                       ^
main.cpp:2:54: error: use of undeclared identifier 'cond2'
    int count = Convert.ToInt(cond1) + Convert.ToInt(cond2) + ... + Convert.ToInt(cond5);
                                                     ^
main.cpp:2:63: error: expected expression
    int count = Convert.ToInt(cond1) + Convert.ToInt(cond2) + ... + Convert.ToInt(cond5);
                                                              ^
main.cpp:11:5: error: expected expression
    .... and so on...
    ^
main.cpp:13:2: warning: no newline at end of file [-Wnewline-eof]
}
 ^
1 warning and 6 errors generated.
