trunk/Archive2/98/7bf7863f2f01ce/main.cpp
int main() {
    int count = Convert.ToInt(cond1) + Convert.ToInt(cond2) + ... + Convert.ToInt(cond5);
    switch(count) 
    {
    case 1: 
        //code 1
        break;
    case 2: 
        //code 2
        break;
    .... and so on...
    }
}